; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_d2i_param.c_d2i_KeyParams_bio.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_d2i_param.c_d2i_KeyParams_bio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @d2i_KeyParams_bio(i32 %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %7, align 8
  store i8* null, i8** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @asn1_d2i_read_bio(i32* %11, %struct.TYPE_4__** %7)
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* %10, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %25

16:                                               ; preds = %3
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** %8, align 8
  %21 = load i32, i32* %4, align 4
  %22 = load i8**, i8*** %5, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i8* @d2i_KeyParams(i32 %21, i8** %22, i8** %8, i32 %23)
  store i8* %24, i8** %9, align 8
  br label %25

25:                                               ; preds = %16, %15
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %27 = call i32 @BUF_MEM_free(%struct.TYPE_4__* %26)
  %28 = load i8*, i8** %9, align 8
  ret i8* %28
}

declare dso_local i32 @asn1_d2i_read_bio(i32*, %struct.TYPE_4__**) #1

declare dso_local i8* @d2i_KeyParams(i32, i8**, i8**, i32) #1

declare dso_local i32 @BUF_MEM_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
